--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -63,6 +63,8 @@ code.inline{
     white-space: -o-pre-wrap;    /* Opera 7 */
     word-wrap: break-word;       /* Internet Explorer 5.5+ */
 	}
+#content{padding-top: 50px;}
+
 /* D */
 dt {
 	margin-top: 1.5em;
@@ -159,7 +161,6 @@ img{ margin:0px }
 /* Navbar styles*/
 .navbar {padding:0 2em; border-bottom:4px solid #456889 !important;}
 /*.navbar .dropdown {margin-top:.25em;}*/
-.navbar {border-bottom:4px solid #456889 !important;}
 .navbar-inner {border-bottom:.5em solid #456889 !important;}
 .navbar-inner .container{height: 45px !important; padding-top:.5em; margin-left:.5em;}
 .navbar-inner {border-bottom:.5em solid #456889 !important;}
@@ -304,6 +305,12 @@ pre {
 }
 
 .top-padding {margin-top:2.5em !important;}
+
+/* V */
+.vertical-align {
+    display: flex;
+    align-items: center;
+}
 
 /* W */
 .white-link{color:white;}
