--- a/templates/page.html
+++ b/templates/page.html
@@ -10,9 +10,9 @@
         <!-- Srophe styles -->
         <link rel="stylesheet" type="text/css" href="$nav-base/resources/css/syr-icon-fonts.css"/>
         <link rel="stylesheet" type="text/css" href="$nav-base/resources/css/style.css"/>
-        <link rel="stylesheet" type="text/css" href="$nav-base/resources/css/main.css"/>
+        <link rel="stylesheet" type="text/css" href="$nav-base/resources/css/usaybia.css"/>
         <link rel="stylesheet" type="text/css" href="$nav-base/resources/css/slider.css"/>
-        <link rel="stylesheet" type="text/css" href="$nav-base/resources/css/lightslider.css"/>
+        <!-- Used for homepage -->
         <link rel="stylesheet" type="text/css" media="print" href="$nav-base/resources/css/print.css"/>
         <!-- Leaflet -->
         <link rel="stylesheet" href="$nav-base/resources/leaflet/leaflet.css"/>
@@ -80,7 +80,7 @@
         </script>
     </head>
     <body id="body">
-        <nav class="navbar navbar-default navbar-fixed-top" role="navigation" data-template="app:fix-links">
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" data-template="app:fix-links">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
@@ -89,60 +89,15 @@
                     <span class="icon-bar"/>
                 </button>
                 <a class="navbar-brand banner-container" href="$nav-base/index.html"> 
-                    <span class="syriaca-icon syriaca-syriaca banner-icon">
-                        <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
-                    </span>
-                    <span class="banner-text">Syriaca.org</span>
+                    <span class="syriaca-icon syriaca-syriaca banner-icon" data-template="app:logo"/>
+                    <span data-template="config:app-title">App Title</span>
                 </a>
             </div>
             <div class="navbar-collapse collapse pull-right" id="navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li  class="dropdown">
-                        <a href="$nav-base/index.html" style="margin-top:.5em;">
-                            <span class="icon-text">Publications</span>
-                        </a>
-                    </li>
-                    <!-- Shared drop-down menu of all submodules -->
-                    <li data-template="app:shared-content" data-template-path="/templates/shared-links.html"/>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"> About <b class="caret"/></a>
-                        <ul class="dropdown-menu pull-right">
-                            <li>
-                                <a href="$nav-base/about-syriac.html">What is Syriac?</a>
-                            </li>
-                            <li role="presentation" class="divider"/>
-                            <li>
-                                <a href="$nav-base/about-srophe.html">Project Overview</a>
-                            </li>
-                            <li role="presentation" class="divider"/>
-                            <li>
-                                <a href="$nav-base/project-team.html">Project Team</a>
-                            </li>
-                            <li role="presentation" class="divider"/>
-                            <li>
-                                <a href="$nav-base/project-partners.html">Project Partners</a>
-                            </li>
-                            <li role="presentation" class="divider"/>
-                            <li>
-                                <a href="$nav-base/media-releases.html">Media Releases</a>
-                            </li>
-                            <li role="presentation" class="divider"/>
-                            <li>
-                                <a href="http://vu.edu/syriac">Support Our Work</a>
-                            </li>
-                            <li role="presentation" class="divider"/>
-                            <li>
-                                <a href="$nav-base/contact-us.html">Contact Us</a>
-                            </li>
-                            <li role="presentation" class="divider"/>
-                            <li>
-                                <a href="$nav-base/documentation/index.html">
-                                    <span class="syriaca-icon syriaca-book icon-nav" style="color:red;"/>
-                                    <span class="icon-text">Documentation</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
+                    <li>
+                        <a href="$nav-base/index.html" class="nav-text">Home</a>
+                    </li> 
                 </ul>
                 <form class="navbar-form navbar-left navbar-input-group" role="search" action="$nav-base/search.html" method="get">
                     <div class="input-group">
@@ -195,6 +150,8 @@
                             </ul>
                         </div>
                     </li>
+                    <li><div class="btn-nav"><a class="btn btn-default  navbar-btn" href="#">en</a></div></li>
+                    <li><div class="btn-nav"><a class="btn btn-default  navbar-btn" href="de/index.html">de</a></div></li>
                 </ul>
             </div>
         </nav>
@@ -206,7 +163,5 @@
     <script type="text/javascript" src="$nav-base/resources/js/jquery.validate.min.js"/>
     <script type="text/javascript" src="$nav-base/resources/js/require.min.js"/>
     <script type="text/javascript" src="$nav-base/resources/js/srophe.js"/>
-    <script type="text/javascript" src="$nav-base/resources/js/lightslider.min.js"/>
-    <script type="text/javascript" src="$nav-base/resources/js/lightslider-functions.js"/>
     <script data-template="app:google-analytics"/>
 </html>
