--- a/resources/css/usaybia.css
+++ b/resources/css/usaybia.css
@@ -12,10 +12,11 @@
 }
 
 body {font-family: Arsenal-Regular; background-color:white;}
+#content {margin-top: 54px;}
 
 h5 {font-size: 1.25em;}
 
-footer {border:none;}
+footer {border:none; border-top:3px solid #87B59C;}
 
 .bg-light {
   background-color: rgb(248,249,250, .85);
@@ -24,7 +25,7 @@ footer {border:none;}
 }
 
 .bg-dark {
-  background-color: rgba(0, 0, 0, .75);
+  background-color: rgba(0, 0, 0, .85);
   -webkit-backdrop-filter: saturate(180%) blur(20px);
   backdrop-filter: saturate(180%) blur(20px); 
   color:white;
@@ -51,11 +52,8 @@ footer {border:none;}
  * Custom translucent site header
  */
 .navbar {
-  background-color: rgba(0, 0, 0, .85);
-  -webkit-backdrop-filter: saturate(180%) blur(20px);
-  backdrop-filter: saturate(180%) blur(20px);
+  background-color: none;
   font-variant:small-caps;
-  border-bottom: #87B59C;
 }
 
 .navbar a {
@@ -69,7 +67,7 @@ footer {border:none;}
 
 .navbar-brand {margin:0; padding:.5em 0; font-size: 1.15em; font-variant:small-caps;}
 
-.navbar {padding:0 2em; border-bottom:4px solid #87B59C !important;}
+.navbar {padding:0 2em; border:none !important;}
 
 .btn-navbar{
     color: #fff !important;
@@ -85,15 +83,47 @@ footer {border:none;}
     
 }
 
-.navbar input {
-  background-color: rgba(153,153,153, .10);
-  -webkit-backdrop-filter: saturate(180%) blur(20px);
-  backdrop-filter: saturate(180%) blur(20px);
-  border: 1px solid #777;
-    
+.search-bar {
+    background-color: rgb(248,249,250, .95);
+    position:fixed;
+    right: 50;
+    left: 50;
+    width: 100%;
+    height:50px;
+    border:none;
+    text-align:center;
+/*    border-bottom:1px solid #87B59C;*/
 }
 
-.btn-dark,.navbar .btn-default {
+.search-bar form{
+    padding-top:.5em;
+    display: inline-block;
+    width: 60%;
+    }
+.search-bar a {color:#444;}
+.search-bar a:hover {color:#87B59C;}
+.search-bar .input-group {width: 100%;}
+.search-bar .input-group input {background-color:white;}
+.search-bar .input-group-btn {width: 1% !important;}
+.search-bar .input-group .form-control{
+	border-right:0; 
+	box-shadow:0 0 0; 
+	border-color:#ccc;
+}
+.search-bar .input-group .search-btn{
+    border-left:0;
+    border-color:#ccc;
+    background:transparent;
+    background-color:white;
+    border-bottom-right-radius: 4px !important;
+    border-top-right-radius: 4px !important;
+
+}
+
+
+/* Custom buttons */
+
+.btn-dark {
   background-color: rgba(153,153,153, .10);
   -webkit-backdrop-filter: saturate(180%) blur(20px);
   backdrop-filter: saturate(180%) blur(20px);
@@ -101,27 +131,34 @@ footer {border:none;}
   color:#9d9d9d;
 }
 
-button.btn-dark:active, .navbar .btn-default:active {
+button.btn-dark:active{
       transform: translateY(1px);
       filter: saturate(150%);
     }
 
-button.btn-dark:hover, .navbar .btn-default:hover {
+button.btn-dark:hover {
       color: #ddd;
       background-color: rgba(143,143,143, .10);
     }
     
-button.btn-dark::-moz-focus-inner, .navbar .btn-default::-moz-focus-inner {
+button.btn-dark::-moz-focus-inner {
       border: none;
     }
 
-button.btn-dark:focus,.navbar .btn-default:focus {
+button.btn-dark:focus {
       outline: none;
       box-shadow: 0 0 0 3px rgba(87, 145, 170, 0.5),
         0 0 0 1.5px rgba(87, 145, 170, 0.5);
     }
 
-
+.btn-info {
+  background-color: rgba(135,181,156, .85);
+  -webkit-backdrop-filter: saturate(180%) blur(20px);
+  backdrop-filter: saturate(180%) blur(20px);
+  border: 1px solid #87B59C;  
+  color:white;
+}
+    
 /* Homage page styles */
 .home-splash {
     padding-top: 8em;
