Fix hover over advanced search button. See: https://github.com/srophe/srophe-eXist-app/issues/1186

--- a/templates/bibl.html
+++ b/templates/bibl.html
@@ -128,7 +128,7 @@
                 <ul class="nav navbar-nav navbar-right keboard-btn">
                     <li>
                         <div class="btn-nav">
-                            <a href="#" class="btn btn-default navbar-btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" title="Select Font"><b class="caret"/></a>
+                            <a href="#" class="btn btn-default navbar-btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" title="Advanced Search"><b class="caret"/></a>
                             <ul class="dropdown-menu" id="advanced-search">
                                 <li>
                                     <a href="$nav-base/bibl/search.html">Advanced Search</a>
