--- a/templates/q.html
+++ b/templates/q.html
@@ -151,7 +151,7 @@
                 <ul class="nav navbar-nav navbar-right keboard-btn">
                     <li>
                         <div class="btn-nav">
-                            <a href="#" class="btn btn-default navbar-btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" title="Select Font"><b class="caret"/></a>
+                            <a href="#" class="btn btn-default navbar-btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" title="Advanced Search"><b class="caret"/></a>
                             <ul class="dropdown-menu" id="swap-font">
                                 <li>
                                     <a href="$nav-base/q/search.html">Advanced Search</a>
