--- a/templates/saints.html
+++ b/templates/saints.html
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" data-template="app:get-work">
     <head>
         <meta charset="utf-8"/>
@@ -100,10 +99,7 @@
                 </button>
                 <a class="navbar-brand banner-container" href="$nav-base/saints/index.html">
                     <span class="syriaca-icon syriaca-saints banner-icon">
-                        <span class="path1"/>
-                        <span class="path2"/>
-                        <span class="path3"/>
-                        <span class="path4"/>
+                        <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                     </span>
                     <span class="banner-text" data-template="config:collection-title" data-template-collection="spear">Gateway to the Syriac Saints</span>
                 </a>
@@ -113,10 +109,7 @@
                     <li>
                         <a href="$nav-base/q/index.html" class="icon-container">
                             <span class="syriaca-icon syriaca-q icon-nav">
-                                <span class="path1"/>
-                                <span class="path2"/>
-                                <span class="path3"/>
-                                <span class="path4"/>
+                                <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                             </span>
                             <span class="icon-text">Qadishe</span>
                         </a>
@@ -124,10 +117,7 @@
                     <li>
                         <a href="$nav-base/bhse/index.html" class="icon-container">
                             <span class="syriaca-icon syriaca-bhse icon-nav">
-                                <span class="path1"/>
-                                <span class="path2"/>
-                                <span class="path3"/>
-                                <span class="path4"/>
+                                <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                             </span>
                             <span class="icon-text">BHSE</span>
                         </a>
@@ -135,10 +125,7 @@
                     <li class="dropdown">
                         <a href="$nav-base/index.html" class="icon-container">
                             <span class="syriaca-icon syriaca-syriaca icon-nav">
-                                <span class="path1"/>
-                                <span class="path2"/>
-                                <span class="path3"/>
-                                <span class="path4"/>
+                                <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                             </span>
                             <span class="icon-text">Syriaca.org</span>
                         </a>
