--- a/templates/geo.html
+++ b/templates/geo.html
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" data-template="app:get-work">
     <head>
         <title data-template="app:record-title" data-template-collection="places">App Title</title>
@@ -99,10 +98,7 @@
                 </button>
                 <a class="navbar-brand banner-container" href="$nav-base/geo/index.html"> 
                     <span class="syriaca-icon syriaca-geo banner-icon">
-                        <span class="path1"/>
-                        <span class="path2"/>
-                        <span class="path3"/>
-                        <span class="path4"/>
+                        <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                     </span>
                     <span class="banner-text" data-template="config:collection-title" data-template-collection="places">Collection Title</span>
                 </a>
@@ -124,10 +120,7 @@
                     <li>
                         <a href="$nav-base/index.html" class="icon-container">
                             <span class="syriaca-icon syriaca-syriaca icon-nav">
-                                <span class="path1"/>
-                                <span class="path2"/>
-                                <span class="path3"/>
-                                <span class="path4"/>
+                                <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                             </span>
                             <span class="icon-text">Syriaca.org</span>
                         </a>
