--- a/templates/nhsl.html
+++ b/templates/nhsl.html
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" data-template="app:get-work">
     <head>
         <meta charset="utf-8"/>
@@ -102,10 +101,7 @@
                 </button>
                 <a class="navbar-brand banner-container" href="$nav-base/nhsl/index.html">
                     <span class="syriaca-icon syriaca-nhsl banner-icon">
-                        <span class="path1"/>
-                        <span class="path2"/>
-                        <span class="path3"/>
-                        <span class="path4"/>
+                        <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                     </span>
                     <span class="banner-text">New Handbook of Syriac Literature</span>
                 </a>
@@ -119,10 +115,7 @@
                             <li>
                                 <a href="$nav-base/nhsl/browse.html">
                                     <span class="syriaca-icon syriaca-nhsl icon-nav">
-                                        <span class="path1"/>
-                                        <span class="path2"/>
-                                        <span class="path3"/>
-                                        <span class="path4"/>
+                                        <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                                     </span>
                                     <span class="icon-text">Browse NHSL</span>
                                 </a>
@@ -131,10 +124,7 @@
                             <li>
                                 <a href="$nav-base/bhse/browse.html">
                                     <span class="syriaca-icon syriaca-bhse icon-nav">
-                                        <span class="path1"/>
-                                        <span class="path2"/>
-                                        <span class="path3"/>
-                                        <span class="path4"/>
+                                        <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                                     </span>
                                     <span class="icon-text">Browse BHSE</span>
                                 </a>
@@ -148,10 +138,7 @@
                             <li>
                                 <a href="$nav-base/nhsl/about.html">
                                     <span class="syriaca-icon syriaca-nhsl icon-nav">
-                                        <span class="path1"/>
-                                        <span class="path2"/>
-                                        <span class="path3"/>
-                                        <span class="path4"/>
+                                        <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                                     </span>
                                     <span class="icon-text">About NHSL</span>
                                 </a>
@@ -160,10 +147,7 @@
                             <li>
                                 <a href="$nav-base/bhse/about.html">
                                     <span class="syriaca-icon syriaca-bhse icon-nav">
-                                        <span class="path1"/>
-                                        <span class="path2"/>
-                                        <span class="path3"/>
-                                        <span class="path4"/>
+                                        <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                                     </span>
                                     <span class="icon-text">About BHSE</span>
                                 </a>
@@ -179,10 +163,7 @@
                     <li class="dropdown">
                         <a href="$nav-base/index.html" class="icon-container">
                             <span class="syriaca-icon syriaca-syriaca icon-nav">
-                                <span class="path1"/>
-                                <span class="path2"/>
-                                <span class="path3"/>
-                                <span class="path4"/>
+                                <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                             </span>
                             <span class="icon-text">Syriaca.org</span>
                         </a>
