--- a/templates/page.html
+++ b/templates/page.html
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" data-template="app:get-work">
     <head>
         <title data-template="app:record-title">App Title</title>
@@ -91,10 +90,7 @@
                 </button>
                 <a class="navbar-brand banner-container" href="$nav-base/index.html"> 
                     <span class="syriaca-icon syriaca-syriaca banner-icon">
-                        <span class="path1"/>
-                        <span class="path2"/>
-                        <span class="path3"/>
-                        <span class="path4"/>
+                        <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                     </span>
                     <span class="banner-text">Syriaca.org</span>
                 </a>
