--- a/templates/shared-links.html
+++ b/templates/shared-links.html
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <li xmlns="http://www.w3.org/1999/xhtml" class="dropdown">
     <a href="#" class="dropdown-toggle lonely-caret" data-toggle="dropdown">
         <span class="mobile-submenu">Publications </span>  <b class="caret"/>
@@ -7,10 +6,7 @@
         <li>
             <a href="$nav-base/geo/index.html" class="icon-container">
                 <span class="syriaca-icon syriaca-geo icon-nav">
-                    <span class="path1"/>
-                    <span class="path2"/>
-                    <span class="path3"/>
-                    <span class="path4"/>
+                    <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                 </span>
                 <span class="icon-text">Gazetteer</span>
             </a>
@@ -19,10 +15,7 @@
         <li>
             <a href="$nav-base/persons/index.html" class="icon-container">
                 <span class="syriaca-icon syriaca-sbd icon-nav">
-                    <span class="path1"/>
-                    <span class="path2"/>
-                    <span class="path3"/>
-                    <span class="path4"/>
+                    <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                 </span>
                 <span class="icon-text">SBD</span>
             </a>
@@ -31,10 +24,7 @@
         <li>
             <a href="$nav-base/authors/index.html" class="icon-container">
                 <span class="syriaca-icon syriaca-authors icon-nav">
-                    <span class="path1"/>
-                    <span class="path2"/>
-                    <span class="path3"/>
-                    <span class="path4"/>
+                    <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                 </span>
                 <span class="icon-text">Authors</span>
             </a>
@@ -43,10 +33,7 @@
         <li>
             <a href="$nav-base/saints/index.html" class="icon-container">
                 <span class="syriaca-icon syriaca-saints icon-nav">
-                    <span class="path1"/>
-                    <span class="path2"/>
-                    <span class="path3"/>
-                    <span class="path4"/>
+                    <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                 </span>
                 <span class="icon-text">Gateway to the Saints</span>
             </a>
@@ -55,10 +42,7 @@
         <li>
             <a href="$nav-base/q/index.html" class="icon-container">
                 <span class="syriaca-icon syriaca-q icon-nav">
-                    <span class="path1"/>
-                    <span class="path2"/>
-                    <span class="path3"/>
-                    <span class="path4"/>
+                    <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                 </span>
                 <span class="icon-text">Qadishe</span>
             </a>
@@ -67,10 +51,7 @@
         <li>
             <a href="$nav-base/bhse/index.html" class="icon-container">
                 <span class="syriaca-icon syriaca-bhse icon-nav">
-                    <span class="path1"/>
-                    <span class="path2"/>
-                    <span class="path3"/>
-                    <span class="path4"/>
+                    <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                 </span>
                 <span class="icon-text">BHSE</span>
             </a>
@@ -80,10 +61,7 @@
         <li>
             <a href="$nav-base/nhsl/index.html" class="icon-container">
                 <span class="syriaca-icon syriaca-nhsl icon-nav">
-                    <span class="path1"/>
-                    <span class="path2"/>
-                    <span class="path3"/>
-                    <span class="path4"/>
+                    <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                 </span>
                 <span class="icon-text">NHSL</span>
             </a>
@@ -92,10 +70,7 @@
         <li>
             <a href="$nav-base/spear/index.html" class="icon-container">
                 <span class="syriaca-icon syriaca-spear icon-nav">
-                    <span class="path1"/>
-                    <span class="path2"/>
-                    <span class="path3"/>
-                    <span class="path4"/>
+                    <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                 </span>
                 <span class="icon-text">SPEAR</span>
             </a>
@@ -104,10 +79,7 @@
         <li>
             <a href="$nav-base/mss/index.html" class="icon-container">
                 <span class="syriaca-icon syriaca-mss icon-nav">
-                    <span class="path1"/>
-                    <span class="path2"/>
-                    <span class="path3"/>
-                    <span class="path4"/>
+                    <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                 </span>
                 <span class="icon-text">MSS</span>
             </a>
