Updates for eXist v5 integration.

--- a/templates/bhse.html
+++ b/templates/bhse.html
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" data-template="app:get-work">
     <head>
         <meta charset="utf-8"/>
@@ -99,7 +100,10 @@
                 </button>
                 <a class="navbar-brand banner-container" href="$nav-base/bhse/index.html">
                     <span class="syriaca-icon syriaca-bhse banner-icon">
-                        <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
+                        <span class="path1"/>
+                        <span class="path2"/>
+                        <span class="path3"/>
+                        <span class="path4"/>
                     </span>
                     <span class="banner-text">Bibliotheca Hagiographica Syriaca Electronica</span>
                 </a>
@@ -112,7 +116,10 @@
                     <li>
                         <a href="$nav-base/saints/index.html" class="icon-container">
                             <span class="syriaca-icon syriaca-saints icon-nav">
-                                <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
+                                <span class="path1"/>
+                                <span class="path2"/>
+                                <span class="path3"/>
+                                <span class="path4"/>
                             </span>
                             <span class="icon-text">Gateway to the Saints</span>
                         </a>
@@ -120,7 +127,10 @@
                     <li class="dropdown">
                         <a href="$nav-base/index.html" class="icon-container">
                             <span class="syriaca-icon syriaca-syriaca icon-nav">
-                                <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
+                                <span class="path1"/>
+                                <span class="path2"/>
+                                <span class="path3"/>
+                                <span class="path4"/>
                             </span>
                             <span class="icon-text">Syriaca.org</span>
                         </a>
