--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -77,6 +77,7 @@ footer .poweredby { float: right; margin: 33px 10px 0 0;}
 footer .poweredby img { width: 120px; }
 
 /* facets */
+.facet-title {display:block; font-weight:bold; margin: 1em 0 .5em 0;}
 .facet-label {
     margin-left:.5em; 
     display:block; 
@@ -84,7 +85,7 @@ footer .poweredby img { width: 120px; }
     white-space: normal;
     }
 .facet-label.remove {background-color:#eee; color:#666; font-weight:normal; margin:.25em; display:inline-block;}
-
+.facet-remove {padding-right:6px; margin-right:6px; border-right:1px solid #666; font-weight:normal; color:#666;}
 /* G */
 .geo-home {margin-top:4em !important;}
 .geo-home #map {border-bottom:4px solid #456889}
