--- a/templates/authors.html
+++ b/templates/authors.html
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" data-template="app:get-work">
     <head>
         <meta charset="utf-8"/>
@@ -99,7 +100,10 @@
                 <a class="navbar-brand banner-container" href="$nav-base/authors/index.html">
                     <!--<img property="logo" class="img-responsive" alt="Syriac.org" src="$nav-base/resources/images/syriaca-logo.png"/> Draft-->
                     <span class="syriaca-icon syriaca-authors banner-icon">
-                        <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
+                        <span class="path1"/>
+                        <span class="path2"/>
+                        <span class="path3"/>
+                        <span class="path4"/>
                     </span>
                     <span class="banner-text">A Guide to Syriac Authors</span>
                 </a>
@@ -112,7 +116,10 @@
                     <li class="dropdown">
                         <a href="$nav-base/index.html" class="icon-container">
                             <span class="syriaca-icon syriaca-syriaca icon-nav">
-                                <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
+                                <span class="path1"/>
+                                <span class="path2"/>
+                                <span class="path3"/>
+                                <span class="path4"/>
                             </span>
                             <span class="icon-text">Syriaca.org</span>
                         </a>
