--- a/templates/bibl.html
+++ b/templates/bibl.html
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" data-template="app:get-work">
     <head>
         <meta charset="utf-8"/>
@@ -106,7 +107,10 @@
                     <li class="dropdown">
                         <a href="$nav-base/index.html" class="icon-container">
                             <span class="syriaca-icon syriaca-syriaca icon-nav">
-                                <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
+                                <span class="path1"/>
+                                <span class="path2"/>
+                                <span class="path3"/>
+                                <span class="path4"/>
                             </span>
                             <span class="icon-text">Syriaca.org</span>
                         </a>
