--- a/templates/bible.html
+++ b/templates/bible.html
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" data-template="app:get-work">
     <head>
         <meta charset="utf-8"/>
@@ -100,7 +101,10 @@
                 </button>
                 <a class="navbar-brand banner-container" href="$nav-base/bible/index.html">
                     <span class="syriaca-icon syriaca-nhsl banner-icon">
-                        <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
+                        <span class="path1"/>
+                        <span class="path2"/>
+                        <span class="path3"/>
+                        <span class="path4"/>
                     </span>
                     <span class="banner-text">A Guide to the Bible in Syriac</span>
                 </a>
@@ -113,7 +117,10 @@
                     <li class="dropdown">
                         <a href="$nav-base/index.html" class="icon-container">
                             <span class="syriaca-icon syriaca-syriaca icon-nav">
-                                <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
+                                <span class="path1"/>
+                                <span class="path2"/>
+                                <span class="path3"/>
+                                <span class="path4"/>
                             </span>
                             <span class="icon-text">Syriaca.org</span>
                         </a>
