--- a/templates/persons.html
+++ b/templates/persons.html
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" data-template="app:get-work">
     <head>
         <meta charset="utf-8"/>
@@ -99,7 +100,10 @@
                 </button>
                 <a class="navbar-brand banner-container" href="$nav-base/geo/index.html"> 
                     <span class="syriaca-icon syriaca-sbd banner-icon">
-                        <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
+                        <span class="path1"/>
+                        <span class="path2"/>
+                        <span class="path3"/>
+                        <span class="path4"/>
                     </span>
                     <span class="banner-text" data-template="config:collection-title" data-template-collection="sbd">Collection Title</span>
                 </a>
@@ -113,7 +117,10 @@
                             <li>
                                 <a href="$nav-base/persons/browse.html" class="icon-container">
                                     <span class="syriaca-icon syriaca-sbd icon-nav">
-                                        <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
+                                        <span class="path1"/>
+                                        <span class="path2"/>
+                                        <span class="path3"/>
+                                        <span class="path4"/>
                                     </span>
                                     <span class="icon-text">Browse SBD</span>
                                 </a>
@@ -122,7 +129,10 @@
                             <li>
                                 <a href="$nav-base/q/browse.html" class="icon-container">
                                     <span class="syriaca-icon syriaca-q icon-nav">
-                                        <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
+                                        <span class="path1"/>
+                                        <span class="path2"/>
+                                        <span class="path3"/>
+                                        <span class="path4"/>
                                     </span>
                                     <span class="icon-text">Browse Qadishe</span>
                                 </a>
@@ -131,7 +141,10 @@
                             <li>
                                 <a href="$nav-base/authors/browse.html" class="icon-container">
                                     <span class="syriaca-icon syriaca-authors icon-nav">
-                                        <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
+                                        <span class="path1"/>
+                                        <span class="path2"/>
+                                        <span class="path3"/>
+                                        <span class="path4"/>
                                     </span>
                                     <span class="icon-text">Browse Authors</span>
                                 </a>
@@ -141,7 +154,10 @@
                     <li class="dropdown">
                         <a href="$nav-base/index.html" class="icon-container">
                             <span class="syriaca-icon syriaca-syriaca icon-nav">
-                                <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
+                                <span class="path1"/>
+                                <span class="path2"/>
+                                <span class="path3"/>
+                                <span class="path4"/>
                             </span>
                             <span class="icon-text">Syriaca.org</span>
                         </a>
