--- a/templates/shared-links.html
+++ b/templates/shared-links.html
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <li xmlns="http://www.w3.org/1999/xhtml" class="dropdown">
     <a href="#" class="dropdown-toggle lonely-caret" data-toggle="dropdown">
         <span class="mobile-submenu">Publications </span>  <b class="caret"/>
@@ -6,7 +7,10 @@
         <li>
             <a href="$nav-base/geo/index.html" class="icon-container">
                 <span class="syriaca-icon syriaca-geo icon-nav">
-                    <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
+                    <span class="path1"/>
+                    <span class="path2"/>
+                    <span class="path3"/>
+                    <span class="path4"/>
                 </span>
                 <span class="icon-text">Gazetteer</span>
             </a>
@@ -15,7 +19,10 @@
         <li>
             <a href="$nav-base/persons/index.html" class="icon-container">
                 <span class="syriaca-icon syriaca-sbd icon-nav">
-                    <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
+                    <span class="path1"/>
+                    <span class="path2"/>
+                    <span class="path3"/>
+                    <span class="path4"/>
                 </span>
                 <span class="icon-text">SBD</span>
             </a>
@@ -24,7 +31,10 @@
         <li>
             <a href="$nav-base/authors/index.html" class="icon-container">
                 <span class="syriaca-icon syriaca-authors icon-nav">
-                    <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
+                    <span class="path1"/>
+                    <span class="path2"/>
+                    <span class="path3"/>
+                    <span class="path4"/>
                 </span>
                 <span class="icon-text">Authors</span>
             </a>
@@ -33,7 +43,10 @@
         <li>
             <a href="$nav-base/saints/index.html" class="icon-container">
                 <span class="syriaca-icon syriaca-saints icon-nav">
-                    <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
+                    <span class="path1"/>
+                    <span class="path2"/>
+                    <span class="path3"/>
+                    <span class="path4"/>
                 </span>
                 <span class="icon-text">Gateway to the Saints</span>
             </a>
@@ -42,7 +55,10 @@
         <li>
             <a href="$nav-base/q/index.html" class="icon-container">
                 <span class="syriaca-icon syriaca-q icon-nav">
-                    <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
+                    <span class="path1"/>
+                    <span class="path2"/>
+                    <span class="path3"/>
+                    <span class="path4"/>
                 </span>
                 <span class="icon-text">Qadishe</span>
             </a>
@@ -51,7 +67,10 @@
         <li>
             <a href="$nav-base/bhse/index.html" class="icon-container">
                 <span class="syriaca-icon syriaca-bhse icon-nav">
-                    <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
+                    <span class="path1"/>
+                    <span class="path2"/>
+                    <span class="path3"/>
+                    <span class="path4"/>
                 </span>
                 <span class="icon-text">BHSE</span>
             </a>
