Uopdates for docker deployment. Fix slow map loading in persons modules.

--- a/templates/nhsl.html
+++ b/templates/nhsl.html
@@ -102,10 +102,7 @@
                 </button>
                 <a class="navbar-brand banner-container" href="$nav-base/nhsl/index.html">
                     <span class="syriaca-icon syriaca-nhsl banner-icon">
-                        <span class="path1"/>
-                        <span class="path2"/>
-                        <span class="path3"/>
-                        <span class="path4"/>
+                        <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                     </span>
                     <span class="banner-text">New Handbook of Syriac Literature</span>
                 </a>
@@ -119,10 +116,7 @@
                             <li>
                                 <a href="$nav-base/nhsl/browse.html">
                                     <span class="syriaca-icon syriaca-nhsl icon-nav">
-                                        <span class="path1"/>
-                                        <span class="path2"/>
-                                        <span class="path3"/>
-                                        <span class="path4"/>
+                                        <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                                     </span>
                                     <span class="icon-text">Browse NHSL</span>
                                 </a>
@@ -131,10 +125,7 @@
                             <li>
                                 <a href="$nav-base/bhse/browse.html">
                                     <span class="syriaca-icon syriaca-bhse icon-nav">
-                                        <span class="path1"/>
-                                        <span class="path2"/>
-                                        <span class="path3"/>
-                                        <span class="path4"/>
+                                        <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                                     </span>
                                     <span class="icon-text">Browse BHSE</span>
                                 </a>
@@ -148,10 +139,7 @@
                             <li>
                                 <a href="$nav-base/nhsl/about.html">
                                     <span class="syriaca-icon syriaca-nhsl icon-nav">
-                                        <span class="path1"/>
-                                        <span class="path2"/>
-                                        <span class="path3"/>
-                                        <span class="path4"/>
+                                        <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                                     </span>
                                     <span class="icon-text">About NHSL</span>
                                 </a>
@@ -160,10 +148,7 @@
                             <li>
                                 <a href="$nav-base/bhse/about.html">
                                     <span class="syriaca-icon syriaca-bhse icon-nav">
-                                        <span class="path1"/>
-                                        <span class="path2"/>
-                                        <span class="path3"/>
-                                        <span class="path4"/>
+                                        <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                                     </span>
                                     <span class="icon-text">About BHSE</span>
                                 </a>
@@ -179,10 +164,7 @@
                     <li class="dropdown">
                         <a href="$nav-base/index.html" class="icon-container">
                             <span class="syriaca-icon syriaca-syriaca icon-nav">
-                                <span class="path1"/>
-                                <span class="path2"/>
-                                <span class="path3"/>
-                                <span class="path4"/>
+                                <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                             </span>
                             <span class="icon-text">Syriaca.org</span>
                         </a>
