--- a/templates/persons.html
+++ b/templates/persons.html
@@ -100,10 +100,7 @@
                 </button>
                 <a class="navbar-brand banner-container" href="$nav-base/persons/index.html"> 
                     <span class="syriaca-icon syriaca-sbd banner-icon">
-                        <span class="path1"/>
-                        <span class="path2"/>
-                        <span class="path3"/>
-                        <span class="path4"/>
+                        <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                     </span>
                     <span class="banner-text" data-template="config:collection-title" data-template-collection="sbd">Collection Title</span>
                 </a>
@@ -117,10 +114,7 @@
                             <li>
                                 <a href="$nav-base/persons/browse.html" class="icon-container">
                                     <span class="syriaca-icon syriaca-sbd icon-nav">
-                                        <span class="path1"/>
-                                        <span class="path2"/>
-                                        <span class="path3"/>
-                                        <span class="path4"/>
+                                        <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                                     </span>
                                     <span class="icon-text">Browse SBD</span>
                                 </a>
@@ -129,10 +123,7 @@
                             <li>
                                 <a href="$nav-base/q/browse.html" class="icon-container">
                                     <span class="syriaca-icon syriaca-q icon-nav">
-                                        <span class="path1"/>
-                                        <span class="path2"/>
-                                        <span class="path3"/>
-                                        <span class="path4"/>
+                                        <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                                     </span>
                                     <span class="icon-text">Browse Qadishe</span>
                                 </a>
@@ -141,10 +132,7 @@
                             <li>
                                 <a href="$nav-base/authors/browse.html" class="icon-container">
                                     <span class="syriaca-icon syriaca-authors icon-nav">
-                                        <span class="path1"/>
-                                        <span class="path2"/>
-                                        <span class="path3"/>
-                                        <span class="path4"/>
+                                        <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                                     </span>
                                     <span class="icon-text">Browse Authors</span>
                                 </a>
@@ -154,10 +142,7 @@
                     <li class="dropdown">
                         <a href="$nav-base/index.html" class="icon-container">
                             <span class="syriaca-icon syriaca-syriaca icon-nav">
-                                <span class="path1"/>
-                                <span class="path2"/>
-                                <span class="path3"/>
-                                <span class="path4"/>
+                                <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                             </span>
                             <span class="icon-text">Syriaca.org</span>
                         </a>
