--- a/templates/authors.html
+++ b/templates/authors.html
@@ -100,10 +100,7 @@
                 <a class="navbar-brand banner-container" href="$nav-base/authors/index.html">
                     <!--<img property="logo" class="img-responsive" alt="Syriac.org" src="$nav-base/resources/images/syriaca-logo.png"/> Draft-->
                     <span class="syriaca-icon syriaca-authors banner-icon">
-                        <span class="path1"/>
-                        <span class="path2"/>
-                        <span class="path3"/>
-                        <span class="path4"/>
+                        <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                     </span>
                     <span class="banner-text">A Guide to Syriac Authors</span>
                 </a>
@@ -116,10 +113,7 @@
                     <li class="dropdown">
                         <a href="$nav-base/index.html" class="icon-container">
                             <span class="syriaca-icon syriaca-syriaca icon-nav">
-                                <span class="path1"/>
-                                <span class="path2"/>
-                                <span class="path3"/>
-                                <span class="path4"/>
+                                <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                             </span>
                             <span class="icon-text">Syriaca.org</span>
                         </a>
