--- a/templates/bhse.html
+++ b/templates/bhse.html
@@ -100,10 +100,7 @@
                 </button>
                 <a class="navbar-brand banner-container" href="$nav-base/bhse/index.html">
                     <span class="syriaca-icon syriaca-bhse banner-icon">
-                        <span class="path1"/>
-                        <span class="path2"/>
-                        <span class="path3"/>
-                        <span class="path4"/>
+                        <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                     </span>
                     <span class="banner-text">Bibliotheca Hagiographica Syriaca Electronica</span>
                 </a>
@@ -116,10 +113,7 @@
                     <li>
                         <a href="$nav-base/saints/index.html" class="icon-container">
                             <span class="syriaca-icon syriaca-saints icon-nav">
-                                <span class="path1"/>
-                                <span class="path2"/>
-                                <span class="path3"/>
-                                <span class="path4"/>
+                                <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                             </span>
                             <span class="icon-text">Gateway to the Saints</span>
                         </a>
@@ -127,10 +121,7 @@
                     <li class="dropdown">
                         <a href="$nav-base/index.html" class="icon-container">
                             <span class="syriaca-icon syriaca-syriaca icon-nav">
-                                <span class="path1"/>
-                                <span class="path2"/>
-                                <span class="path3"/>
-                                <span class="path4"/>
+                                <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                             </span>
                             <span class="icon-text">Syriaca.org</span>
                         </a>
