--- a/templates/bible.html
+++ b/templates/bible.html
@@ -101,10 +101,7 @@
                 </button>
                 <a class="navbar-brand banner-container" href="$nav-base/bible/index.html">
                     <span class="syriaca-icon syriaca-nhsl banner-icon">
-                        <span class="path1"/>
-                        <span class="path2"/>
-                        <span class="path3"/>
-                        <span class="path4"/>
+                        <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                     </span>
                     <span class="banner-text">A Guide to the Bible in Syriac</span>
                 </a>
@@ -117,10 +114,7 @@
                     <li class="dropdown">
                         <a href="$nav-base/index.html" class="icon-container">
                             <span class="syriaca-icon syriaca-syriaca icon-nav">
-                                <span class="path1"/>
-                                <span class="path2"/>
-                                <span class="path3"/>
-                                <span class="path4"/>
+                                <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                             </span>
                             <span class="icon-text">Syriaca.org</span>
                         </a>
