--- a/templates/geo.html
+++ b/templates/geo.html
@@ -99,10 +99,7 @@
                 </button>
                 <a class="navbar-brand banner-container" href="$nav-base/geo/index.html"> 
                     <span class="syriaca-icon syriaca-geo banner-icon">
-                        <span class="path1"/>
-                        <span class="path2"/>
-                        <span class="path3"/>
-                        <span class="path4"/>
+                        <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                     </span>
                     <span class="banner-text" data-template="config:collection-title" data-template-collection="places">Collection Title</span>
                 </a>
@@ -124,10 +121,7 @@
                     <li>
                         <a href="$nav-base/index.html" class="icon-container">
                             <span class="syriaca-icon syriaca-syriaca icon-nav">
-                                <span class="path1"/>
-                                <span class="path2"/>
-                                <span class="path3"/>
-                                <span class="path4"/>
+                                <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                             </span>
                             <span class="icon-text">Syriaca.org</span>
                         </a>
