--- a/templates/manuscripts.html
+++ b/templates/manuscripts.html
@@ -99,10 +99,7 @@
                 </button>
                 <a class="navbar-brand banner-container" href="$nav-base/mss/index.html">
                     <span class="syriaca-icon syriaca-mss banner-icon">
-                        <span class="path1"/>
-                        <span class="path2"/>
-                        <span class="path3"/>
-                        <span class="path4"/>
+                        <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                     </span>
                     <span class="banner-text">A Digital Catalogue of Syriac Manuscripts in the British Library</span>
                 </a>
@@ -115,10 +112,7 @@
                     <li class="dropdown">
                         <a href="$nav-base/index.html" class="icon-container">
                             <span class="syriaca-icon syriaca-syriaca icon-nav">
-                                <span class="path1"/>
-                                <span class="path2"/>
-                                <span class="path3"/>
-                                <span class="path4"/>
+                                <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                             </span>
                             <span class="icon-text">Syriaca.org</span>
                         </a>
