--- a/templates/page.html
+++ b/templates/page.html
@@ -91,10 +91,7 @@
                 </button>
                 <a class="navbar-brand banner-container" href="$nav-base/index.html"> 
                     <span class="syriaca-icon syriaca-syriaca banner-icon">
-                        <span class="path1"/>
-                        <span class="path2"/>
-                        <span class="path3"/>
-                        <span class="path4"/>
+                        <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                     </span>
                     <span class="banner-text">Syriaca.org</span>
                 </a>
