--- a/templates/q.html
+++ b/templates/q.html
@@ -100,10 +100,7 @@
                 </button>
                 <a class="navbar-brand banner-container" href="$nav-base/q/index.html">
                     <span class="syriaca-icon syriaca-q banner-icon">
-                        <span class="path1"/>
-                        <span class="path2"/>
-                        <span class="path3"/>
-                        <span class="path4"/>
+                        <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                     </span>
                     <span class="banner-text">Qadishe: Guide to the Syriac Saints</span>
                 </a>
@@ -126,10 +123,7 @@
                     <li>
                         <a href="$nav-base/bhse/index.html" class="icon-container">
                             <span class="syriaca-icon syriaca-bhse icon-nav">
-                                <span class="path1"/>
-                                <span class="path2"/>
-                                <span class="path3"/>
-                                <span class="path4"/>
+                                <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                             </span>
                             <span class="icon-text">BHSE</span>
                         </a>
@@ -137,10 +131,7 @@
                     <li class="dropdown">
                         <a href="$nav-base/index.html" class="icon-container">
                             <span class="syriaca-icon syriaca-syriaca icon-nav">
-                                <span class="path1"/>
-                                <span class="path2"/>
-                                <span class="path3"/>
-                                <span class="path4"/>
+                                <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                             </span>
                             <span class="icon-text">Syriaca.org</span>
                         </a>
