--- a/templates/shared-links.html
+++ b/templates/shared-links.html
@@ -7,10 +7,7 @@
         <li>
             <a href="$nav-base/geo/index.html" class="icon-container">
                 <span class="syriaca-icon syriaca-geo icon-nav">
-                    <span class="path1"/>
-                    <span class="path2"/>
-                    <span class="path3"/>
-                    <span class="path4"/>
+                    <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                 </span>
                 <span class="icon-text">Gazetteer</span>
             </a>
@@ -19,10 +16,7 @@
         <li>
             <a href="$nav-base/persons/index.html" class="icon-container">
                 <span class="syriaca-icon syriaca-sbd icon-nav">
-                    <span class="path1"/>
-                    <span class="path2"/>
-                    <span class="path3"/>
-                    <span class="path4"/>
+                    <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                 </span>
                 <span class="icon-text">SBD</span>
             </a>
@@ -31,10 +25,7 @@
         <li>
             <a href="$nav-base/authors/index.html" class="icon-container">
                 <span class="syriaca-icon syriaca-authors icon-nav">
-                    <span class="path1"/>
-                    <span class="path2"/>
-                    <span class="path3"/>
-                    <span class="path4"/>
+                    <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                 </span>
                 <span class="icon-text">Authors</span>
             </a>
@@ -43,10 +34,7 @@
         <li>
             <a href="$nav-base/saints/index.html" class="icon-container">
                 <span class="syriaca-icon syriaca-saints icon-nav">
-                    <span class="path1"/>
-                    <span class="path2"/>
-                    <span class="path3"/>
-                    <span class="path4"/>
+                    <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                 </span>
                 <span class="icon-text">Gateway to the Saints</span>
             </a>
@@ -55,10 +43,7 @@
         <li>
             <a href="$nav-base/q/index.html" class="icon-container">
                 <span class="syriaca-icon syriaca-q icon-nav">
-                    <span class="path1"/>
-                    <span class="path2"/>
-                    <span class="path3"/>
-                    <span class="path4"/>
+                    <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                 </span>
                 <span class="icon-text">Qadishe</span>
             </a>
@@ -67,10 +52,7 @@
         <li>
             <a href="$nav-base/bhse/index.html" class="icon-container">
                 <span class="syriaca-icon syriaca-bhse icon-nav">
-                    <span class="path1"/>
-                    <span class="path2"/>
-                    <span class="path3"/>
-                    <span class="path4"/>
+                    <span class="path1"/><span class="path2"/><span class="path3"/><span class="path4"/>
                 </span>
                 <span class="icon-text">BHSE</span>
             </a>
